--- a/samples/sync_notion_families.ipynb
+++ b/samples/sync_notion_families.ipynb
@@ -2,9 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mCanceled future for execute_request message before replies were done"
+     ]
+    },
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     ]
+    }
+   ],
    "source": [
     "import os\n",
     "import datetime\n",
@@ -20,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -88,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +115,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -144,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -153,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -163,14 +180,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 893/893 [26:36<00:00,  1.79s/it]  \n"
+      "100%|██████████| 907/907 [38:44<00:00,  2.56s/it]  \n"
      ]
     }
    ],
@@ -185,105 +202,107 @@
     "        count += 1\n",
     "        # family data\n",
     "        page_id = results[0]['id']\n",
-    "        fam = fetch.families.retrieve(family_id)\n",
-    "        cover = {\"type\": \"external\", \"external\": {\"url\": f\"https://bimservice.ssgbim.com:443/Family/{family_id}/File/FamilyImageLarge\"}}\n",
-    "        properties = dict()\n",
-    "        properties['Name'] = {\"title\": [{\"type\": \"text\", \"text\": {\"content\": fam.name}}]}\n",
-    "        properties['_Status'] = {\"select\": {\"name\": STATUS_DICT.get(fam.status)}}\n",
-    "        documents = \"\\n\".join([f\"[{_file.id}] - {_file.key} - {_file.name+_file.extension}\" for _file in fam.files if \"Gallery\" not in _file.key])\n",
-    "        properties['_Documents'] = {\"rich_text\": [{\"text\": {\"content\": truncate(documents)}}]}\n",
-    "        \n",
-    "        # Parameters\n",
-    "        zM = get_item_in_list(fam.parameters, 'zM', default=\"\")\n",
-    "        properties[\"_zM\"] = {\"rich_text\": [{\"text\": {\"content\": zM}}]}\n",
-    "        \n",
-    "        short_descript = get_item_in_list(fam.parameters, 'SSG_Short Description', default=\"\")\n",
-    "        properties[\"_Short Description\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(short_descript)}}]}\n",
-    "        \n",
-    "        long_descript = get_item_in_list(fam.parameters, 'SSG_Long Description', default=\"\")\n",
-    "        properties[\"_Long Description\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(long_descript)}}]}\n",
-    "        \n",
-    "        # Properties\n",
-    "        # tag_list = get_item_in_list(fam.properties, 'Tags', default=\"\")\n",
-    "        tag_list = []\n",
-    "        for p in fam.properties:\n",
-    "            if p.name.lower() == 'tags':\n",
-    "                tag_list.append(p.value)\n",
-    "        tags = flatten_tags(tag_list)\n",
-    "        # print(tags)\n",
-    "        properties[\"_Tags\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(tags)}}]}\n",
-    "        \n",
-    "        detail = get_item_in_list(fam.properties, 'Detail', default=\"\")\n",
-    "        properties[\"_Detail\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(detail)}}]}\n",
-    "        \n",
-    "        tech_data = get_item_in_list(fam.properties, 'Technical Data', default=\"\")\n",
-    "        properties[\"_Technical Data\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(tech_data)}}]}\n",
-    "        \n",
-    "        fam_design = get_item_in_list(fam.properties, 'Family Design', default=\"\")\n",
-    "        properties[\"_Family Design\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(fam_design)}}]}\n",
-    "        \n",
-    "        connectors = get_item_in_list(fam.properties, 'Has MEP Connectors', default=False)\n",
-    "        if connectors == \"Yes\":\n",
-    "            c_bool = True\n",
-    "        else:\n",
-    "            c_bool = False\n",
-    "        properties[\"_Has MEP Connectors\"] = {\"checkbox\": c_bool}\n",
-    "        \n",
-    "        pricing = get_item_in_list(fam.properties, 'Includes Pricing', default=False)\n",
-    "        if pricing == 'Yes':\n",
-    "            p_bool = True\n",
-    "        else:\n",
-    "            p_bool = False\n",
-    "        properties[\"_Includes Pricing\"] = {\"checkbox\": p_bool}\n",
-    "        \n",
-    "        ada = get_item_in_list(fam.properties, 'ADA Compliant', default=False)\n",
-    "        if ada == 'Yes':\n",
-    "            a_bool = True\n",
-    "        else:\n",
-    "            a_bool = False\n",
-    "        properties[\"_ADA Compliant\"] = {\"checkbox\": a_bool}\n",
-    "        \n",
-    "        sms = get_item_in_list(fam.properties, 'SMS Purchase Link', default=\"\")\n",
-    "        if sms:\n",
-    "            properties['_SMS Purchase Link'] = {\"url\": sms}\n",
-    "        \n",
-    "        product_id = get_item_in_list(fam.properties, 'product_id', default=\"\")\n",
-    "        if product_id:\n",
-    "            properties['_Product Page'] = {\"url\": f\"https://fetchbim.com/catalog/product/view/id/{str(product_id)}\"}\n",
-    "        \n",
-    "        # relations\n",
-    "        bo_cat_value = get_item_in_list(fam.properties, 'BIMobject Category')\n",
-    "        bo_cat_id = bo_cat_dict.get(bo_cat_value)\n",
-    "        if bo_cat_id:\n",
-    "            properties[\"_BIMobject Category\"] = {\"relation\": [{\"id\": bo_cat_id}]}\n",
-    "        \n",
-    "        ifc_value = get_item_in_list(fam.properties, 'IFC')\n",
-    "        ifc_id = ifc_dict.get(ifc_value)\n",
-    "        if ifc_id:\n",
-    "            properties[\"_IFC\"] = {\"relation\": [{\"id\": ifc_id}]}\n",
+    "        response = fetch.families.retrieve(family_id)\n",
+    "        if response.get(\"BusinessFamilies\"):\n",
+    "            fam = Family(**response.get(\"BusinessFamilies\")[0])\n",
+    "            cover = {\"type\": \"external\", \"external\": {\"url\": f\"https://bimservice.ssgbim.com:443/Family/{family_id}/File/FamilyImageLarge\"}}\n",
+    "            properties = dict()\n",
+    "            properties['Name'] = {\"title\": [{\"type\": \"text\", \"text\": {\"content\": fam.name}}]}\n",
+    "            properties['_Status'] = {\"select\": {\"name\": STATUS_DICT.get(fam.status)}}\n",
+    "            documents = \"\\n\".join([f\"[{_file.id}] - {_file.key} - {_file.name+_file.extension}\" for _file in fam.files if \"Gallery\" not in _file.key])\n",
+    "            properties['_Documents'] = {\"rich_text\": [{\"text\": {\"content\": truncate(documents)}}]}\n",
     "            \n",
-    "        omni_value = get_item_in_list(fam.properties, 'Omniclass')\n",
-    "        omni_id = omni_dict.get(omni_value)\n",
-    "        if omni_id:\n",
-    "            properties[\"_Omniclass\"] = {\"relation\": [{\"id\": omni_id}]}\n",
+    "            # Parameters\n",
+    "            zM = get_item_in_list(fam.parameters, 'zM', default=\"\")\n",
+    "            properties[\"_zM\"] = {\"rich_text\": [{\"text\": {\"content\": zM}}]}\n",
     "            \n",
-    "        uniformat_value = get_item_in_list(fam.parameters, 'Assembly Code')\n",
-    "        uniformat_id = uniformat_dict.get(uniformat_value)\n",
-    "        if uniformat_id:\n",
-    "            properties[\"_Uniformat\"] = {\"relation\": [{\"id\": uniformat_id}]}\n",
+    "            short_descript = get_item_in_list(fam.parameters, 'SSG_Short Description', default=\"\")\n",
+    "            properties[\"_Short Description\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(short_descript)}}]}\n",
     "            \n",
-    "        master_value = get_item_in_list(fam.parameters, 'Keynote')\n",
-    "        master_id = master_dict.get(master_value)\n",
-    "        if master_id:\n",
-    "            properties[\"_Masterformat\"] = {\"relation\": [{\"id\": master_id}]}\n",
+    "            long_descript = get_item_in_list(fam.parameters, 'SSG_Long Description', default=\"\")\n",
+    "            properties[\"_Long Description\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(long_descript)}}]}\n",
     "            \n",
-    "        revit_cat_id = revit_cat_dict.get(fam.category_name.split('/')[0])\n",
-    "        if revit_cat_id:\n",
-    "            properties[\"_Revit Category\"] = {\"relation\": [{\"id\": revit_cat_id}]}\n",
-    "        \n",
-    "        # print(properties)\n",
+    "            # Properties\n",
+    "            # tag_list = get_item_in_list(fam.properties, 'Tags', default=\"\")\n",
+    "            tag_list = []\n",
+    "            for p in fam.properties:\n",
+    "                if p.name.lower() == 'tags':\n",
+    "                    tag_list.append(p.value)\n",
+    "            tags = flatten_tags(tag_list)\n",
+    "            # print(tags)\n",
+    "            properties[\"_Tags\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(tags)}}]}\n",
     "            \n",
-    "        response = notion.pages.update(page_id=page_id, properties=properties, cover=cover)\n",
+    "            detail = get_item_in_list(fam.properties, 'Detail', default=\"\")\n",
+    "            properties[\"_Detail\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(detail)}}]}\n",
+    "            \n",
+    "            tech_data = get_item_in_list(fam.properties, 'Technical Data', default=\"\")\n",
+    "            properties[\"_Technical Data\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(tech_data)}}]}\n",
+    "            \n",
+    "            fam_design = get_item_in_list(fam.properties, 'Family Design', default=\"\")\n",
+    "            properties[\"_Family Design\"] = {\"rich_text\": [{\"text\": {\"content\": truncate(fam_design)}}]}\n",
+    "            \n",
+    "            connectors = get_item_in_list(fam.properties, 'Has MEP Connectors', default=False)\n",
+    "            if connectors == \"Yes\":\n",
+    "                c_bool = True\n",
+    "            else:\n",
+    "                c_bool = False\n",
+    "            properties[\"_Has MEP Connectors\"] = {\"checkbox\": c_bool}\n",
+    "            \n",
+    "            pricing = get_item_in_list(fam.properties, 'Includes Pricing', default=False)\n",
+    "            if pricing == 'Yes':\n",
+    "                p_bool = True\n",
+    "            else:\n",
+    "                p_bool = False\n",
+    "            properties[\"_Includes Pricing\"] = {\"checkbox\": p_bool}\n",
+    "            \n",
+    "            ada = get_item_in_list(fam.properties, 'ADA Compliant', default=False)\n",
+    "            if ada == 'Yes':\n",
+    "                a_bool = True\n",
+    "            else:\n",
+    "                a_bool = False\n",
+    "            properties[\"_ADA Compliant\"] = {\"checkbox\": a_bool}\n",
+    "            \n",
+    "            sms = get_item_in_list(fam.properties, 'SMS Purchase Link', default=\"\")\n",
+    "            if sms:\n",
+    "                properties['_SMS Purchase Link'] = {\"url\": sms}\n",
+    "            \n",
+    "            product_id = get_item_in_list(fam.properties, 'product_id', default=\"\")\n",
+    "            if product_id:\n",
+    "                properties['_Product Page'] = {\"url\": f\"https://fetchbim.com/catalog/product/view/id/{str(product_id)}\"}\n",
+    "            \n",
+    "            # relations\n",
+    "            bo_cat_value = get_item_in_list(fam.properties, 'BIMobject Category')\n",
+    "            bo_cat_id = bo_cat_dict.get(bo_cat_value)\n",
+    "            if bo_cat_id:\n",
+    "                properties[\"_BIMobject Category\"] = {\"relation\": [{\"id\": bo_cat_id}]}\n",
+    "            \n",
+    "            ifc_value = get_item_in_list(fam.properties, 'IFC')\n",
+    "            ifc_id = ifc_dict.get(ifc_value)\n",
+    "            if ifc_id:\n",
+    "                properties[\"_IFC\"] = {\"relation\": [{\"id\": ifc_id}]}\n",
+    "                \n",
+    "            omni_value = get_item_in_list(fam.properties, 'Omniclass')\n",
+    "            omni_id = omni_dict.get(omni_value)\n",
+    "            if omni_id:\n",
+    "                properties[\"_Omniclass\"] = {\"relation\": [{\"id\": omni_id}]}\n",
+    "                \n",
+    "            uniformat_value = get_item_in_list(fam.parameters, 'Assembly Code')\n",
+    "            uniformat_id = uniformat_dict.get(uniformat_value)\n",
+    "            if uniformat_id:\n",
+    "                properties[\"_Uniformat\"] = {\"relation\": [{\"id\": uniformat_id}]}\n",
+    "                \n",
+    "            master_value = get_item_in_list(fam.parameters, 'Keynote')\n",
+    "            master_id = master_dict.get(master_value)\n",
+    "            if master_id:\n",
+    "                properties[\"_Masterformat\"] = {\"relation\": [{\"id\": master_id}]}\n",
+    "                \n",
+    "            revit_cat_id = revit_cat_dict.get(fam.category_name.split('/')[0])\n",
+    "            if revit_cat_id:\n",
+    "                properties[\"_Revit Category\"] = {\"relation\": [{\"id\": revit_cat_id}]}\n",
+    "            \n",
+    "            # print(properties)\n",
+    "                \n",
+    "            response = notion.pages.update(page_id=page_id, properties=properties, cover=cover)\n",
     "        \n",
     "t1_stop = perf_counter()\n",
     "script_time_s = t1_stop - t1_start\n",
@@ -317,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
+   "version": "3.10.2"
   },
   "orig_nbformat": 4,
   "vscode": {
